<resources>
    <string name="app_name">Needle</string>
    <string name="developed">Developed by SLC Studios</string>
    <string name="edit">Edit</string>

    <!--- Login -->
    <string name="login">Login</string>
    <string name="not_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="forgot_password">Forgot password</string>
    <string name="or_login">or login with</string>
    <string name="complete_field">Complete all fields</string>
    <string name="email_not_vefified">Email is not verify</string>
    <string name="password_not_match">Passwords don\'t match</string>

    <!--- Register -->
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="confirm_password">Confirm password</string>

    <!--- Swipe -->
    <string name="profile_incomplete">Your profile is incomplete</string>
    <string name="profile_hidden">"Your profile is hidden\nGo to settings to change it"</string>
    <string name="no_group">You are not in any group</string>
    <string name="up_to_date">You are up to date</string>
    <string name="its_match">"It's a match!"</string>

    <!--- Dialog -->
    <string name="verify_email">Verify email</string>
    <string name="verify_email_des">An email has been sent to confirm the account</string>
    <string name="ok">OK</string>
    <string name="group">Group</string>
    <string name="share_code">Share this code</string>
    <string name="copy">Copy</string>
    <string name="close">Close</string>
    <string name="create">Create</string>
    <string name="create_group">Create group</string>
    <string name="error">Error</string>
    <string name="join">Join</string>
    <string name="join_group">Join group</string>
    <string name="code">Code</string>

    <!--- Settings -->
    <string name="settings">Settings</string>
    <string name="groups">Groups:</string>
    <string name="visible">Visible in Needle</string>
    <string name="sign_out">Sign out</string>
    <string name="text_copied">Text copied to clipboard</string>
    <string name="group_leaved">Group leaved</string>
    <string name="alert">Alert</string>
    <string name="leave_group">Do you want to leave this group?</string>
    <string name="remove_group">Do you want to remove this group?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--- Edit profile -->
    <string name="about_me">About me</string>
    <string name="born">I was born on…</string>
    <string name="default_age">DD-MM-YYYY</string>
    <string name="over_18">You must be over 18 years old</string>
    <string name="i_am">I\'m a…</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="other">Other</string>
    <string name="trans_man">Trans man</string>
    <string name="trans_woman">Trans woman</string>
    <string name="looking_for">Looking for…</string>
    <string name="only_matches">Only your matches can see your social media</string>
    <string name="instagram">instagram</string>
    <string name="facebook">facebook</string>
    <string name="phone">phone</string>

    <!--- Walkthrough -->
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="tip_complete">Completa tu perfil</string>
    <string name="tip_social">Añade tus redes sociales</string>
    <string name="tip_group">Crea o únete a un grupo</string>
    <string name="tip_swipe">Desliza entre los miembros</string>
    <string name="tip_complete_des">Rellena los campos necesarios para poder usar Needle.</string>
    <string name="tip_social_des">Solo los usuarios con los que tengas match podrán ver esa información.</string>
    <string name="tip_group_des">¡Podrás pertenecer a tantos grupos como quieras!</string>
    <string name="tip_swipe_des">Desliza usuarios que pertenezcan a un grupo del que formas parte. Si ambos os dais me gusta… ¡Seguid en redes sociales!</string>

</resources>