<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_margin="20dp"
    android:background="@drawable/card_white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/join_group"/>

    <EditText
        android:id="@+id/et_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:hint="@string/code"
        android:autofillHints=""
        android:inputType="text" />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_code"
        app:layout_constraintBottom_toBottomOf="@id/et_code"
        app:layout_constraintStart_toStartOf="@id/et_code"
        app:layout_constraintEnd_toEndOf="@id/et_code"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_join"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:background="@drawable/chip_accent"
        android:textColor="@color/white"
        android:text="@string/join"/>

</androidx.constraintlayout.widget.ConstraintLayout>