<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".views.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:ignore="contentDescription"
        android:background="@drawable/card_white" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="40sp"
        android:text="@string/register"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_register"
        app:layout_constraintStart_toStartOf="@id/tv_register"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:paddingEnd="20dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:ellipsize="end"
        android:hint="@string/name"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_dateOfBirth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/tv_register"
        app:layout_constraintEnd_toEndOf="@id/et_name"
        android:layout_marginTop="20dp"
        android:paddingEnd="20dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:hint="@string/date_of_birth"
        android:focusable="false"
        tools:ignore="RtlSymmetry,TextFields"
        android:autofillHints=""
        android:inputType="none" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_name"
        app:layout_constraintBottom_toBottomOf="@id/et_name"
        app:layout_constraintEnd_toEndOf="@id/et_name"
        tools:ignore="contentDescription"
        android:src="@drawable/ic_person"
        app:tint="@color/colorAccent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_dateOfBirth"
        app:layout_constraintBottom_toBottomOf="@id/et_dateOfBirth"
        app:layout_constraintEnd_toEndOf="@id/et_dateOfBirth"
        tools:ignore="contentDescription"
        android:src="@drawable/ic_calendar"
        app:tint="@color/colorAccent"/>

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_dateOfBirth"
        app:layout_constraintStart_toStartOf="@id/tv_register"
        app:layout_constraintEnd_toEndOf="@id/tv_register"
        android:layout_marginTop="20dp"
        android:paddingEnd="20dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:ellipsize="end"
        android:hint="@string/email"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_mail"
        app:layout_constraintStart_toStartOf="@id/tv_register"
        app:layout_constraintEnd_toEndOf="@id/tv_register"
        android:layout_marginTop="20dp"
        android:paddingEnd="20dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:ellipsize="end"
        android:hint="@string/password"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="@id/tv_register"
        app:layout_constraintEnd_toEndOf="@id/tv_register"
        android:layout_marginTop="20dp"
        android:paddingEnd="20dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:ellipsize="end"
        android:hint="@string/confirm_password"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_mail"
        app:layout_constraintBottom_toBottomOf="@id/et_mail"
        app:layout_constraintEnd_toEndOf="@id/et_mail"
        tools:ignore="contentDescription"
        android:src="@drawable/ic_mail"
        app:tint="@color/colorAccent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_confirm"
        app:layout_constraintBottom_toBottomOf="@id/et_confirm"
        app:layout_constraintEnd_toEndOf="@id/et_confirm"
        tools:ignore="contentDescription"
        android:src="@drawable/ic_key"
        app:tint="@color/colorAccent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_password"
        app:layout_constraintBottom_toBottomOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="@id/et_password"
        tools:ignore="contentDescription"
        android:src="@drawable/ic_key"
        app:tint="@color/colorAccent"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/chip_accent"
        android:textColor="@color/white"
        android:text="@string/sign_up"/>

</androidx.constraintlayout.widget.ConstraintLayout>